# scraping-eprijava

./: .gitignore  Cargo.toml  DownloadFinansijskihIzvjestaja.ps1  README.md  Results.csv
Alicorn/: 03122123-2017.html  03122123-2018.html  03122123-2019.html  03122123-2020.html  03122123-2021.html  03122123-2022.html  03122123-2023.html  03122123-2024.html  03122123.htm
Amplitudo/: 02907259-2014.html  02907259-2015.html  02907259-2016.html  02907259-2017.html  02907259-2018.html  02907259-2019.html  02907259-2020.html  02907259-2021.html  02907259-2022.html  02907259-2023.html  02907259-2024.html  02907259.htm
Arctic 7/: 03442586-2022.html  03442586-2023.html  03442586-2024.html  03442586.htm
Artec 3D Adriatica/: 03413381-2022.html  03413381-2023.html  03413381-2024.html  03413381.htm
BGS Consulting/: 03110222-2016.html  03110222-2017.html  03110222-2018.html  03110222-2019.html  03110222-2020.html  03110222-2021.html  03110222-2022.html  03110222-2023.html  03110222-2024.html  03110222.htm
BIXBIT/: 03209296-2018.html  03209296-2019.html  03209296-2020.html  03209296-2021.html  03209296-2022.html  03209296-2023.html  03209296-2024.html  03209296.htm
Belka/: 03418545-2022.html  03418545-2023.html  03418545-2024.html  03418545.htm
Bild Studio/: 02783061-2014.html  02783061-2015.html  02783061-2016.html  02783061-2017.html  02783061-2018.html  02783061-2019.html  02783061-2020.html  02783061-2021.html  02783061-2022.html  02783061-2023.html  02783061-2024.html  02783061.htm
Cikom/: 02177579-2014.html  02177579-2015.html  02177579-2016.html  02177579-2017.html  (+8 more)
(+271 files in other folders)
