[package]
name = "scraping_eprijava"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12", features = ["json", "blocking"] } # Using blocking for simpler translation
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.10"
csv = "1.3"
thiserror = "1.0"
anyhow = "1.0"
log = "0.4"
env_logger = "0.11"
once_cell = "1.19" # For lazy static Regex

[[bin]]
name = "specific"
path = "src/specific.rs"